--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,17 @@
-glpk==0.3
+glpk==0.4.6
 pulp==1.6.8
-cobra==0.6.2
+cobra==0.14.1
+bs4
 pygraphviz==1.3.1
 beautifulsoup==4-4.4.1-3
 python-libsbml-experimental==5.10.0
+pubchempy==1.0.4
+openpyxl==3.0.4
+tqdm==4.47.0
+scipy==1.5.1
+openbabel==2.4.0
+soupsieve==2.0.1
+filelock==3.0.12
+distlib==0.3.1
+jsonschema==3.2.0
+matplotlib==3.2.2
