--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,6 +6,15 @@ include rsgc/GeneCompatibility/D_Tailor/3rdParty/unafold/*
 include rsgc/GeneCompatibility/D_Tailor/3rdParty/vienna/*
 include rsgc/Database/*
 include rsgc/Database/data/*
+include rsgc/Database/tests/data/*
+include rsgc/Database/tests/data2/*
+include rsgc/Database/tests/data3/*
+include rsgc/Database/tests/data4/*
+include rsgc/Database/tests/data6/*
+include rsgc/Database/tests/data7/*
+include rsgc/Database/tests/data8/*
+include rsgc/Database/tests/datam/*
+include rsgc/Database/tests/metacyc_data/*
 include rsgc/Database/mackinac/data/modelseed/bacteria/*
 include rsgc/Database/mackinac/data/modelseed/original/*
 include rsgc/Database/mackinac/data/modelseed/universal/*
