--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 glpk==0.4.6
-pulp==1.6.8
+pulp==2.3
 cobra==0.14.1
 bs4
 pygraphviz==1.3.1
@@ -15,3 +15,4 @@ filelock==3.0.12
 distlib==0.3.1
 jsonschema==3.2.0
 matplotlib==3.2.2
+pillow
