--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,7 @@ glpk==0.4.6
 pulp==2.3
 cobra==0.14.1
 bs4
-pygraphviz==1.3.1
-beautifulsoup==4-4.4.1-3
+beautifulsoup4
 python-libsbml-experimental==5.10.0
 pubchempy==1.0.4
 openpyxl==3.0.4
@@ -15,4 +14,5 @@ filelock==3.0.12
 distlib==0.3.1
 jsonschema==3.2.0
 matplotlib==3.2.2
+graphviz==0.14
 pillow
