update MANIFEST.in file

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,9 +1,21 @@
 include rsgc/Parser/_static/*
-include rsgc/GeneCompatibility/data/*
+include rsgc/GeneCompatibility/*
 include rsgc/GeneCompatibility/D_Tailor/**/*
 include rsgc/GeneCompatibility/D_Tailor/3rdParty/transterm/*
 include rsgc/GeneCompatibility/D_Tailor/3rdParty/unafold/*
 include rsgc/GeneCompatibility/D_Tailor/3rdParty/vienna/*
+include rsgc/GeneCompatibility/D_Tailor/CAI_Tables/*
+include rsgc/GeneCompatibility/D_Tailor/DBOperation/*
+include rsgc/GeneCompatibility/D_Tailor/DesignOfExperiments/*
+include rsgc/GeneCompatibility/D_Tailor/Features/*
+include rsgc/GeneCompatibility/D_Tailor/tmp/structures/*
+include rsgc/GeneCompatibility/D_Tailor/tmp/transterm_files/*
+include rsgc/GeneCompatibility/D_Tailor/tmp/unafold_files/*
+include rsgc/GeneCompatibility/D_Tailor/tmp/*
+include rsgc/GeneCompatibility/D_Tailor/Utils/*
+include rsgc/GeneCompatibility/NCBI_SSU/data/*
+include rsgc/GeneCompatibility/NCBI_SSU/ncbi_gn_data/*
+include rsgc/GeneCompatibility/retrievegeneseqs/data/ncbi_gn_data/*
 include rsgc/Database/*
 include rsgc/Database/data/*
 include rsgc/Database/tests/data/*
